# biom-auth

./: README.md  build.sh
JustGarble/: CMakeLists.txt  Makefile
JustGarble/include/: aes.h  aescircuits.h  bio_auth.h  bio_circuits.h  bio_commit_funcs.h  bio_common.h  check.h  circuit_test_and_gen.h  circuits.h  common.h  dkcipher.h  garble.h  gates.h  justGarble.h  openssl-aes.h  typedefs.h  util.h
JustGarble/include/openssl/: aes.h
JustGarble/src/: aes.c  aescircuits.c  bio_auth.c  bio_circuits.c  bio_commit_funcs.c  bio_common.c  check.c  circuits.c  common.c  dkcipher.c  eval.c  garble.c  gates.c  scd.c  util.c
JustGarble/test/: circuit_test_and_gen.c
OTExtension/: CMakeLists.txt
OTExtension/mains/: CMakeLists.txt  PeerNet.cpp  PeerNet.h  Timer.cpp  Timer.h  authentication_test.cpp  bio_auth.h  parse_options.h  test_controller.cpp  test_controller.h
OTExtension/ot/: alsz-ot-ext-snd.cpp  ot-ext-rec.cpp  ot-ext-snd.cpp
